--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,18 +16,26 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* header */
+#header {
+  width: 100%;
+  height: 80px;
+  background: grey;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* nav */
+#nav {
+}
+
+/* main */
+#main {
+}
+#content {
+}
+
+/* footer */
+#footer {
 }
