--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,10 +20,12 @@
 #header {
   width: 100%;
   height: 80px;
-  background: grey;
+  background: white;
   position: fixed;
-  top: 0;
   z-index: 100;
+  display: flex;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+  justify-content: space-between;
 }
 
 /* nav */
