--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -3,9 +3,9 @@
   margin-top: 22px;
   margin-left: 24px;
 }
-.logo_img {
-  width: 120px;
-  height: 30px;
+.header_logo > img {
+  width: 130px;
+  height: 34px;
 }
 
 /* header_menu */
@@ -14,15 +14,20 @@
   display: flex;
   margin-top: 28px;
 }
-.main_li {
+.header_menu > li {
   position: relative;
 }
-.main_link {
+.header_menu > li > a {
+  color: #5a5550;
   padding-right: 18px;
   padding-left: 18px;
 }
-.sub_li {
+.header_menu > li > a:hover {
+  color: #ff7a00;
+}
+.header_menu > li > ul > li {
   margin-top: 22px;
+  color: white;
 }
 
 /* header_search */
@@ -32,16 +37,17 @@
   display: flex;
   border-width: 1px;
   border-color: #5a5550;
+  opacity: 80%;
   border-radius: 9999px;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
   margin-top: 20px;
   padding: 4px;
 }
-.search_input {
+.search_form > input {
   border-radius: 9999px;
   padding-left: 10px;
 }
-.search_button {
+.search_form > button {
   width: 20px;
   height: 20px;
   margin-top: 2px;
@@ -56,6 +62,9 @@
   font-weight: 300;
   justify-content: space-between;
   margin-top: 30px;
+}
+.header_sub > *:hover {
+  color: #ff7a00;
 }
 .sub_sitemap {
   width: 22px;
