--- a/src/components/Search/HeaderSc/HeaderSc.module.css
+++ b/src/components/Search/HeaderSc/HeaderSc.module.css
@@ -1,3 +1,4 @@
+/* header_search */
 .header_search {
   width: 240px;
   height: 36px;
@@ -10,11 +11,9 @@
   margin-top: 20px;
   padding: 4px;
 }
-
 .header_search > div:first-child {
   display: none;
 }
-
 .header_search > input {
   border-radius: 9999px;
   padding-left: 10px;
@@ -25,3 +24,5 @@
   margin-top: 2px;
   margin-left: 8px;
 }
+
+/* total_search */
